# quine-mccluskey-cpp

./: CMakeLists.txt  README.md
include/: qm.hpp
src/: main.cpp  qm.cpp
